Fix scrollbar for Chrome, Safari and IE

--- a/assets/css/basics/base.css
+++ b/assets/css/basics/base.css
@@ -1,6 +1,10 @@
 body {
     margin: 0;
-    overflow: hidden;
+    -ms-overflow-style: none;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 h1,
